--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Ayla Melek</title>    
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@500&family=Alata&family=Cookie&family=Fjalla+One&family=Lato:wght@700&family=Oswald&family=Pacifico&family=Signika+Negative:wght@300&family=Ubuntu:ital@0;1&family=Rubik:wght@300&family=Updock&family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@500&family=Alata&family=Cookie&family=Fjalla+One&family=Lato:wght@700&family=Oswald&family=Pacifico&family=PT+Serif:wght@700&family=Signika+Negative:wght@300&family=Ubuntu:ital@0;1&family=Rubik:wght@300&family=Updock&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- nav -->
+  <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><h1 class="encabezado-h1"><span>A</span>YLA <span>M</span>ELEK</h1></a>
@@ -34,15 +34,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownXxl" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
             <ul class="dropdown-menu" aria-labelledby="dropdownXxl">
-              <li><a class="dropdown-item" href="/productosH.html">ZAPATOS Para/H</a></li>
-              <li><a class="dropdown-item" href="/productosM.html">ZAPATOS Para/M</a></li>
+              <li><a class="dropdown-item" href="productosH.html">ZAPATOS Para/H</a></li>
+              <li><a class="dropdown-item" href="productosM.html">ZAPATOS Para/M</a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <!-- inicio -->
+  <!-- INICIO -->
 <section id="inicio">
   <div class="inicio">
     <div class="inicio-title">
@@ -60,12 +60,12 @@
     </div>     
   </div>
 </section>
-<!-- sobre nosotros -->
+<!-- SOBRE NOSOTROS -->
 <div class="d-flex h-100 text-center text-white bg-dark" cz-shortcut-listen="true">
     <div id="sobreNosotros" class="cover-container d-flex mx-auto flex-column">
       <main class="px-3">
         <h1 class="p-5">Sobre Nosotros</h1>
-        <img class="imgSobreNosotros" src="/img/logoAM.webp" alt="">
+        <img class="imgSobreNosotros" src="img/logoAM.webp" alt="">
         <p class="lead d-flex flex-column">Somos una empresa que produce y comercializa calzado para dama y hombre de excelente calidad, con diseños innovadores, y comprometidos con el mejoramiento continuo de nuestros productos y servicios a través de un alto nivel de productividad y competividad, buscando permanentemente la satisfaccion de nuestros clientes.
           En Bahia Blanca en el 2021 surge nuestra empresa llamada Ayla Melek "AM" con la finalidad de ser una empresa lider en la produccion y comercializacion de calzado para dama a nivel nacional e internacional por la excelente calidad, precio y diseño de sus productos.
         </p>
@@ -78,13 +78,13 @@
       </footer>
     </div>
   </div>
-
-  <!-- footer -->
+  
+  <!-- FOOTER -->
   <div id="footer" class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center my-3">
       <p class="col-md-4 mb-0 text-muted">Todos los derechos reservados</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img width="40" height="40" src="/img/logo.jpg" alt="">
+        <img width="40" height="40" src="img/logo.jpg" alt="">
       </a>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="#inicio" class="nav-link px-2 text-muted">Inicio</a></li>
