--- a/productosH.html
+++ b/productosH.html
@@ -9,7 +9,6 @@
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
     crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/main.css"/>
-    <link rel="icon" href="assets/rib-logo-nav.png">
     <title>Ayla Melek Productos</title>
     <link rel="icon" href="img/logo.jpg">
 </head>
@@ -19,7 +18,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Seventh navbar example">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html"><h1 class="encabezado-h1"><span>A</span>YLA <span>M</span>ELEK</h1></a>
+          <a class="navbar-brand" href="index.html"><h1 class="encabezado-h1"><span>A</span>YLA <span>M</span>ELEK</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleXxl" aria-controls="navbarsExampleXxl" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,18 +26,18 @@
           <div class="collapse navbar-collapse" id="navbarsExampleXxl">
             <ul class="navbar-nav me-auto mb-2 mb-xl-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#sobreNosotros">Sobre nosotros</a>
+                <a class="nav-link" href="index.html#sobreNosotros">Sobre nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#footer">Contacto</a>
+                <a class="nav-link" href="index.html#footer">Contacto</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownXxl" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownXxl">
-                  <li><a class="dropdown-item" href="/productosM.html">ZAPATOS P/M</a></li>
+                  <li><a class="dropdown-item" href="productosM.html">ZAPATOS P/M</a></li>
                 </ul>
               </li>
             </ul>
@@ -51,7 +50,7 @@
         <div class="contenedor">
             <a href="#">
                  <figure>
-                     <img src="/img/zapato11.jpg">
+                     <img src="img/zapato11.jpg">
                      <div class="capa">
                          <h3>PRODUCTO N1</h3>
                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -60,7 +59,7 @@
              </a>
              <a href="#">
                 <figure>
-                    <img src="/img/zapato22.jpg">
+                    <img src="img/zapato22.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -69,7 +68,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato111.jpg">
+                    <img src="img/zapato111.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -78,7 +77,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato222.jpg">
+                    <img src="img/zapato222.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N4</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -87,7 +86,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato1111.jpg">
+                    <img src="img/zapato1111.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N5</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -96,7 +95,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato2222.jpg">
+                    <img src="img/zapato2222.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N6</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -105,7 +104,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato111111.jpg">
+                    <img src="img/zapato111111.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N7</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -114,7 +113,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato11111.jpg">
+                    <img src="img/zapato11111.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N8</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -123,7 +122,7 @@
             </a>
             <a href="#">
                 <figure>
-                    <img src="/img/zapato22222.jpg">
+                    <img src="img/zapato22222.jpg">
                     <div class="capa">
                         <h3>PRODUCTO N9</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -136,13 +135,13 @@
 <div id="footer" class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center my-3">
       <p class="col-md-4 mb-0 text-muted">Todos los derechos reservados</p>
-      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-light text-decoration-none">
-        <img width="40" height="40" src="/img/logo.jpg" alt="">
+      <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-light text-decoration-none">
+        <img width="40" height="40" src="img/logo.jpg" alt="">
       </a>
       <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Inicio</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"></a></li>
-        <li class="nav-item"><a href="/productosM.html" class="nav-link px-2 text-muted">Productos Para/M</a></li>
+        <li class="nav-item"><a href="productosM.html" class="nav-link px-2 text-muted">Productos Para/M</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">TyS</a></li>
         <li class="nav-item"><a href="index.html#sobreNosotros" class="nav-link px-2 text-muted">Sobre Nosotros</a></li>
       </ul>
